# browser-history-refindery

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  zensical.toml
.github/: CODE_OF_CONDUCT.md  dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: benchmark.yml  docs.yml  integration.yml  labeler.yml  lint-test.yml  publish.yml  release-drafter.yml  security.yml
docs/: getting-started.md  index.md
docs/guide/: importing.md  privacy.md  status-and-deletion.md
docs/maintainers/: architecture.md  development.md
docs/reference/: browsers.md  cli.md  configuration.md  faq.md  troubleshooting.md
src/browser_history_refindery/: __init__.py  __main__.py  api_client.py  api_models.py  cli.py  config.py  estimation.py  filter_categories.py  filters.py  logsetup.py  pacer.py  pipeline.py  state.py  stats.py  ui.py
src/browser_history_refindery/browsers/: __init__.py  base.py  chromium.py  discovery.py  firefox.py  safari.py  snapshot.py
src/browser_history_refindery/commands/: forget_cmd.py  import_cmd.py  list_profiles.py  status_sweep.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_discovery.py  test_estimation.py  test_filters.py  test_logging.py  test_pacer.py  test_package_metadata.py  test_pipeline.py  test_readers.py  test_snapshot.py  test_state.py  test_stats.py  test_status_sweep.py  test_times.py  test_ui.py
