[project]
name = "browser-history-refindery"
version = "0.1.0"
description = "Import macOS browser history into a Refindery backend"
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["browser-history", "chrome", "firefox", "refindery", "safari"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx2>=2.2.0",
    "loguru>=0.7.2",
    "pydantic>=2.13.4",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
refindery-import = "browser_history_refindery.cli:app"

[project.urls]
Homepage = "https://github.com/hbmartin/browser-history-refindery"
Documentation = "https://hbmartin.github.io/browser-history-refindery/"
Repository = "https://github.com/hbmartin/browser-history-refindery"
Changelog = "https://github.com/hbmartin/browser-history-refindery/releases"
Issues = "https://github.com/hbmartin/browser-history-refindery/issues"

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "lizard>=1.23.0",
    "pyrefly>=1.1.1",
    "pyroma>=5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx2-pytest>=1.0.1",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]
docs = [
    "zensical>=0.0.47,<0.1",
]

[tool.deptry]
known_first_party = ["browser_history_refindery"]

[tool.pyrefly]
search-path = ["src", "."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D105", "D107", "D203", "D212", "D213", "EM101", "PLR2004", "T201"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ARG001", "ARG005", "D101", "D102", "D103", "D104", "D401", "DTZ003", "ERA001", "F403", "F405", "FBT002", "G004", "N802", "PLC0415", "PLR2004", "PLW1510", "PT011", "PT013", "PTH110", "PTH118", "PTH119", "PTH122", "PTH123", "PTH207", "S101", "S102", "S106", "S311", "S603", "S607", "SIM115"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
